<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="awesomecompanyofawesomeness.ex2sql.InsertActivity">






    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sub_insert"
        android:id="@+id/btn_insert"
        android:onClick="onClickInsert"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/insert_header"
        android:id="@+id/txtv_i_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/txtv_i_header"
    android:layout_above="@+id/btn_insert">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtv_i_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_insert"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_name"
                android:id="@+id/txtv_i_name" />
            <EditText android:id="@+id/editText_i_name" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_surname"
                android:id="@+id/txtv_i_surname" />
            <EditText android:id="@+id/editText_i_surname" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_city"
                android:id="@+id/txtv_i_city" />
            <EditText android:id="@+id/editText_i_city" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_street"
                android:id="@+id/txtv_i_street" />
            <EditText android:id="@+id/editText_i_street" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_phone"
                android:id="@+id/txtv_i_phone" />
            <EditText android:id="@+id/editText_i_phone"
                android:inputType="number"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_mail"
                android:id="@+id/txtv_i_mail" />
            <EditText android:id="@+id/editText_i_mail"
                android:text="SmallDude@Dwarfmail.imp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_info"
                android:id="@+id/textView"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>
</ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btn_i_back"
        android:layout_alignBottom="@+id/btn_insert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickBack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/btn_i_clear"
        android:layout_alignTop="@+id/btn_insert"
        android:layout_centerHorizontal="true"
        android:onClick="onClickRefresh" />

</RelativeLayout>
