<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="awesomecompanyofawesomeness.ex2sql.SearchActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        android:id="@+id/btn_s_search"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="search" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btn_s_back"
        android:layout_alignBottom="@+id/btn_s_search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onBackClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/search_header"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_name"
        android:id="@+id/rad_name"
        android:checked="true"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onRadNameClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_surname"
        android:id="@+id/rad_surname"
        android:checked="false"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/rad_name"
        android:layout_toEndOf="@+id/rad_name"
        android:onClick="onRadSurnameClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_city"
        android:id="@+id/rad_city"
        android:checked="false"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/rad_surname"
        android:layout_toEndOf="@+id/rad_surname"
        android:onClick="onRadCityClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_discr"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_search"
        android:layout_below="@+id/rad_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_s_search"
        android:layout_alignEnd="@+id/btn_s_search" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_s_search"
        android:id="@+id/tbl"
        android:stretchColumns="*"></TableLayout>

</RelativeLayout>
